Commit des modifications locales